--- a/browse.html
+++ b/browse.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -102,4 +102,5 @@
     <audio id="main-audio-player"></audio>
     <script src="script.js"></script>
 </body>
+
 </html>
