--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -378,4 +378,5 @@ setInterval(updateDateTime, 1000);
 updateDateTime();
 </script>
 </body>
+
 </html>
