--- a/premium.html
+++ b/premium.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -31,13 +31,13 @@
     </div>
 </nav>
 
-<!-- MAIN CONTENT -->
+
 <section id="main-content-area">
 
     <h1 class="page-title">Go <span class="mint">Premium</span></h1>
     <p class="subtitle">Pick the plan that fits your lifestyle. Cancel anytime.</p>
 
-    <!-- PREMIUM PLANS -->
+   
     <div class="top-mix-grid premium-grid">
 
         <div class="mix-card">
@@ -153,11 +153,12 @@
 
 
 
-<!-- FOOTER -->
+
 <footer>
         <p> &copy; 2026 Euphoria Entertainment.</p>
     </footer>
 
 <script src="javascript.js"></script>
 </body>
+
 </html>
